@@ -27,7 +27,7 @@ the root or a branch of a <em>supervision tree</em>.
 <h2> Interface </h2>
 
 <pre>
-     s6-svscan [ -S | -s ] [ -d <em>notif</em> ] [ -c max ] [ -t <em>rescan</em> ] [ <em>scandir</em> ]
+     s6-svscan [ -S | -s ] [ -d <em>notif</em> ] [ -X <em>consoleholder</em> ] [ -c max ] [ -t <em>rescan</em> ] [ <em>scandir</em> ]
 </pre>
 
 <ul>
@@ -73,6 +73,14 @@ even that the relevant <a href="s6-supervise.html">s6-supervise</a> processes ha
 been started. If you need to test for <em>deep readiness</em>, meaning that all the
 services in the supervision tree have been started and are ready, you cannot rely
 on this option. </li>
+ <li> <tt>-X&nbsp;<em>consoleholder</em></tt>&nbsp;: assume the output console is available
+on descriptor <em>consoleholder</em>. If this option is given, and a <tt>s6-svscan-log</tt>
+service exists, the <a href="s6-supervise.html">s6-supervise</a> process for that service
+will be run with <em>consoleholder</em> as its standard error. This is mainly useful
+for a setup done via <a href="//skarnet.org/software/s6-linux-init/">s6-linux-init</a>,
+where all error messages go to the <tt>s6-svscan-log</tt> catch-all logger service by
+default, except messages from this service itself, which fall back to <em>consoleholder</em>.
+If you're not sure what to use this option for, or how, you don't need it. </li>
  <li> <tt>-c&nbsp;<em>max</em></tt>&nbsp;: maintain services for up to <em>max</em>
 service directories. Default is 500. Lower limit is 2. There is no upper limit, but:
  <ul>
