@@ -28,6 +28,9 @@ disabled when execline support is disabled. </li>
  <li> A new '?' directive has been added to <a href="s6-log.html">s6-log</a>,
 it declares a processor command line that is spawned with the <tt>/bin/sh</tt>
 interpreter. </li>
+ <li> A new <tt>-X</tt> option has been added to <a href="s6-svscan.html>s6-svscan</a>
+to better support <a href="//skarnet.org/software/s6-linux-init/">s6-linux-init</a>
+installations. </li>
 </ul>
 
 <h2> in 2.9.0.1 </h2>
