@@ -7,6 +7,7 @@ In 2.9.1.0
  - execline support is now optional. Some functionality is not available
 when execline support is disabled.
  - New '?' directive to s6-log, to spawn a processor with /bin/sh.
+ - New console holder functionality for easier s6-svscan-log support.
 
 
 In 2.9.0.1
